--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Umutcan
 
 # Short bio or description (displayed in the header)
-description: test
+description: Notes
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://cdn2.civitatis.com/sudafrica/ciudad-del-cabo/galeria/montana-mesa-ciudad-cabo.jpg
 
 #
 # Flags below are optional
@@ -21,12 +21,12 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
-  instagram:
-  linkedin:
+  github: ubb-ubb
+  instagram: 
+  linkedin: https://www.linkedin.com/in/umutcan-boran-bozkurk/
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
