--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: ubb-ubb
   instagram: 
-  linkedin: https://www.linkedin.com/in/umutcan-boran-bozkurk/
+  linkedin: umutcan-boran-bozkurk
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
